--- a/factpage.html
+++ b/factpage.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Meow+Script&family=Pacifico&display=swap" rel="stylesheet">    
     <title>LOVE</title>
-    <link rel="stylesheet" href="/css/faсtpageStyle.css">
+    <link rel="stylesheet" href="css/faсtpageStyle.css">
 </head>
 <body>
     <p id="text"></p>
