--- a/factpage.html
+++ b/factpage.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Meow+Script&family=Pacifico&display=swap" rel="stylesheet">    
-    <title>LOVE</title>
-    <link rel="stylesheet" href="css/faсtpageStyle.css">
-</head>
-<body>
-    <p id="text"></p>
-    <img id="img" src="" alt="">
-    <script src="js/factpageScript.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Meow+Script&family=Pacifico&display=swap"
+			rel="stylesheet"
+		/>
+		<title>LOVE</title>
+		<link rel="icon" type="image/png" href="image/favicon.png" />
+		<link rel="stylesheet" href="css/faсtpageStyle.css" />
+	</head>
+	<body>
+		<p id="text"></p>
+		<img id="img" src="" alt="" />
+		<script src="js/factpageScript.js"></script>
+	</body>
 </html>
