--- a/factpage.html
+++ b/factpage.html
@@ -16,6 +16,7 @@
 	<body>
 		<p id="text"></p>
 		<img id="img" src="" alt="" />
+		<img id="code" src="" alt="" />
 		<script src="js/factpageScript.js"></script>
 	</body>
 </html>
