--- a/factpage.html
+++ b/factpage.html
@@ -9,6 +9,11 @@
 			href="https://fonts.googleapis.com/css2?family=Meow+Script&family=Pacifico&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+			rel="stylesheet"
+		/>
+
 		<title>LOVE</title>
 		<link rel="icon" type="image/png" href="image/favicon.png" />
 		<link rel="stylesheet" href="css/faсtpageStyle.css" />
